Remove add wrapper element Added 100% height to fill-width to fix some layout issues

--- a/admin/client/src/styles/_layout.scss
+++ b/admin/client/src/styles/_layout.scss
@@ -168,6 +168,7 @@ html, body {
 // Nested items take up width
 .fill-width {
   width: 100%;
+  height: 100%;
   display: -ms-flexbox;
   display: flex;
   -ms-flex-direction: row;
